--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -12,17 +12,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이메일"/>
-
-    <EditText
-        android:id="@+id/emailEdt"
+    
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="이메일 입력"/>
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/emailEdt"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:hint="이메일 입력"/>
+
+        <Button
+            android:id="@+id/emailCheckBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="중복 확인"/>
+
+    </LinearLayout>
+
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="비밀번호"/>
+
 
     <EditText
         android:id="@+id/passwordEdt"
