실제 투표 API연동 -응답 UI에 반영하지 않음.

--- a/app/src/main/res/layout/activity_view_topic_detail.xml
+++ b/app/src/main/res/layout/activity_view_topic_detail.xml
@@ -67,6 +67,12 @@
                         android:text="22표"
                         android:textColor="@color/white"/>
 
+                    <Button
+                        android:id="@+id/voteToFirstSideBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="투표하기"/>
+
                 </LinearLayout>
 
 
@@ -98,6 +104,12 @@
                         android:layout_height="wrap_content"
                         android:text="10표"
                         android:textColor="@color/white"/>
+
+                    <Button
+                        android:id="@+id/voteToSecondSideBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="투표하기"/>
 
                 </LinearLayout>
 
