--- a/app/src/main/res/layout/reply_list_item.xml
+++ b/app/src/main/res/layout/reply_list_item.xml
@@ -17,11 +17,13 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/selectSideTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="(두산)" />
 
             <TextView
+                android:id="@+id/userNicknameTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="작성한 닉네임"
@@ -37,6 +39,7 @@
             android:layout_marginBottom="5dp"/>
 
         <TextView
+            android:id="@+id/contentTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="의견 내용이 나올 자리"/>
