--- a/app/src/main/res/layout/reply_list_item.xml
+++ b/app/src/main/res/layout/reply_list_item.xml
@@ -54,12 +54,14 @@
                 android:id="@+id/likeCountBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:clickable="true"
                 android:text="좋아요 n개"/>
 
             <TextView
                 android:id="@+id/dislikeCountBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:clickable="true"
                 android:text="싫어요 n개"/>
 
 
