좋아요 / 싫어요 색감 추가용 xml / UI 반영

--- a/app/src/main/res/layout/reply_list_item.xml
+++ b/app/src/main/res/layout/reply_list_item.xml
@@ -55,6 +55,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="true"
+                android:background="@drawable/red_border_box"
+                android:padding="10dp"
+                android:textColor="#ff0000"
+                android:layout_marginRight="5dp"
                 android:text="좋아요 n개"/>
 
             <TextView
@@ -62,6 +66,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="true"
+                android:background="@drawable/blue_border_box"
+                android:padding="10dp"
+                android:textColor="#0000FF"
                 android:text="싫어요 n개"/>
 
 
