--- a/app/src/main/res/drawable/gray_border_box.xml
+++ b/app/src/main/res/drawable/gray_border_box.xml
@@ -49,7 +49,7 @@
                     android:shape="rectangle">
 
                     <solid
-                        android:color="#D0D0D0"/>
+                        android:color="#A0A0A0"/>
 
                 </shape>
             </item>
@@ -64,7 +64,7 @@
                     android:shape="rectangle">
 
                     <solid
-                        android:color="#D0D0D0"/>
+                        android:color="#A0A0A0"/>
 
                 </shape>
 
